# ProgWiki

./: .gitignore  README.md  TOOLS.md  VSCODE.md
Ada/: MonthYear.cpp
Ada/projects/MonthYear/: MonthYear.adb  MonthYear.gpr
C/: COMPILATION_C.md  README_C.md  STYLE_C.md  TOPICS_C.md
C++/: README_C++.md  STYLE_C++.md  TOPICS_C++.md
C++/BasicThings/: BasicThings.cpp
C++/BoostDemo/: --CMakeLists.txt  CMake-Notes.md  Makefile  boost-demo.cpp
C++/CMakeDemo/: CMakeLists.txt
C++/CMakeDemo/folder1/src/: CMakeLists.txt
C++/CMakeDemo/folder2/src/: CMakeLists.txt
C++/HelloWorld/: HelloWorld.cpp
C++/Inheritance/: relationships.cpp
C++/InheritancePolymorphism/: relationships.cpp
C++/KeywordsConstEtc/: casting.cpp  keywords.hpp
C++/MoreBasics/: MoreBasics.cpp
C++/NoobLibrary/: README.md
C++/OperatorOverloading/: datastructures.hpp
C++/STL_FileIO/: fileio-streams.hpp  fileio_demo.txt  input-output-demo.cpp
C++/Streams_FileIO_II/: filesStreams.hpp  readRoomFile.hpp  rooms.txt
C++/_DayOne/0_HelloWorld/: HelloWorld.cpp
C++/_DayOne/2_BasicObjects/: BasicObjects.cpp
C/0_HelloWorld/: Compilation.md  HelloWorld.c
C/1_Basics/: Basics.c  Makefile
C/1_TypesOpsConds/: TypesOpsConds.c
C/2_DataStructures/: DataStructures.md
C/2_DataStructures/0_Dictionaries/: Dictionary.h  DictionaryDemo.c  DictionaryTest.h  Makefile
C/2_DataStructures/0_Dictionary/: DictionaryDemo.c
C/2_DataStructures/1_Array/: Array.h  ArrayDemo.c  ArrayTest.h
C/2_DataStructures/1_Arrays/: Array.h  ArrayDemo.c  ArrayTest.h
C/2_DataStructures/2_LinkedLists/: LinkedList.h  LinkedListDemo.c
C/3_Strings/: Makefile  Strings.c  Strings.md
C/4_BasicIO/: BasicIO.md
C/4_BasicIO/1_FileIO/: BinaryIO.h  ConsoleIO.h  FileIO.c  FormattedText.h  Makefile  UnformattedText.h
C/4_BasicIO/2_Logging/: LogDemo.c  Logger.h  Logging.c
C/4_BasicIO/3_CommonParsing/: CsvParser.c  CsvParser.h  JsonParser.h  Makefile  Parsing.c  XmlParser.h
C/4_BasicIO/3_Parsing/: Parsing.c
C/4_BasicIO/4_Regex/: Regex.c
C/4_BasicIO/5_DateTime/: DateTime.c  Makefile
C/_DayOne/: README_C.md
C/_DayOne/0_HelloWorld/: HelloWorld.c
C/__tests/: PrintTestResults.h  TestsSummary.h
C/__util/: util.h
Haskell/: COMPILATION_.md  Preamble.md  README_Haskell.md  TOPICS_Haskell.md  projectName.cabal
Haskell/aHelloWorld/: aHelloWorld.cabal
Haskell/aHelloWorld/src/: Main.hs
Haskell/b-Basics/src/: Main.hs
JSTS/React/react-test/src/: App.tsx
JSTS/ReactNN/: README.md  test.md
JSTS/ReactNN/reactNN-test/: package-lock.json  package.json  vite.config.ts
JSTS/ReactNN/reactNN-test/src/: Message.tsx  main.tsx  (+1 more)
Python/: README_PYTHON.md
Python/1_BasicThings/: basics.py
Python/3_BuiltIns-Standouts/: BuiltInTypes.py
Python/3_BuiltIns-Standouts/src/: ContextManagers.py
Python/BasicCalculator/: basicCalc.py
Python/BasicLists/: basicLists.py
Python/BasicThings/: basics.py
Python/BuiltIns-Standouts/: __init__.py
Python/Graphs/: __init__.py  bugs.csv
Python/LiveSplitStats/: README.md
Python/LiveSplitStats/src/: lss.py  lssGraphs.py  lssHelper.py  lssParser.py  lssParsing.py  main.py
Python/NumPyStuff/: NumPyStuff.py
Python/Primes/: init.py  rsa.py  simpleHash.py
Python/_DayOne/2_BasicLists/: basicLists.py
Python/lss-reader/src/: read_lss.py
React/: README.md
RoomBuilder/: RNGtable.txt
Ruby/: MonthYear.rb
Tools/Git/: git.md
__common/: __common.md  formatted.txt
__skeleton/: README_.md  __skeleton.md
__tags/: __tags.md  compiled language.md  interpreted language.md
__tags/paradigms/: declarative language.md  functional language.md  imperative language.md  paradigm.md  procedural language.md
__tags/parameter_passing/: pass-by-reference.md  pass-by-value.md
__tags/type_system/: dynamically typed.md  inferred types.md  manifest types.md  nominally typed.md  statically typed.md  structurally typed.md
_common/: data.csv  unformatted.txt
old/C++/: README_C++.md
old/C++/BoostDemo/: CMakeLists.txt  tasks_example.json
old/C++/Casting&SomeKeywords/: casting.cpp
old/C++/Cpp20Stuff/: cpp20.hpp  cpp20_module.cppm  cpp20demo.cpp
old/C++/DurationsLimits/: durations.cpp
old/C++/Exceptions/: exception_testing.cpp
old/C++/Inheritance/: supersub.hpp
old/C++/NoobLibrary/: README.md  datastructures.hpp
old/C++/OperatorOverloading/: OpOvDoDoNot.hpp  op-overloads.cpp
old/C++/Streams_FileIO/: random_numbers.txt
old/C++/Streams_FileIO_II/: Streams_FileIO_II.cpp
old/Python/LiveSplitStats/: README.md
old/Python/NumPyStuff/: __init__.py
(+19 files in other folders)
